os-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:  
  labels:
    app: mydeploy
  name: mydeploy
  namespace: ex6
spec:
  replicas: 2
  
  selector:
    matchLabels:
      app: mydeploy
  strategy: {}
  template:
    metadata:      
      labels:
        app: mydeploy
      annotations:
        openshift.io/sa.scc.uid-range: 0-999
    spec:
      serviceAccountName: nginx-context-user
      containers:
      - image: nginxinc/nginx-unprivileged
        name: nginx
        resources: 
          limits:
            cpu: 100m
            memory: 50Mi
          requests:
            cpu: 20m
            memory: 5Mi
        ports:
          - containerPort: 80
            name: http-port
        securityContext:          
          # runAsNonRoot: true
          # runAsUser: 10014
          seccompProfile:
            type: RuntimeDefault
          capabilities:
            drop:
              - ALL
status: {}
