k8s-deploy-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mydeploy
  name: mydeploy
  namespace: ex6
spec:
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - nodePort: 30304
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: mydeploy
  sessionAffinity: None
  type: NodePort
