service.yaml
apiVersion: v1
kind: Service
metadata:

  labels:
    app: frontend
  name: frontend
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: frontend
  type: NodePort
status:
  loadBalancer: {}
